--- a/.env.example
+++ b/.env.example
@@ -64,5 +64,6 @@ DOMAIN_BACKEND=ad.test
 DOMAIN_ADVERTISEMENT=advertiser.test
 DOMAIN_PUBLISHMENT=publisher.test
 DOMAIN_RENDER=render.test
+DOMAIN_ANALYSIS=analysis.test
 
 DEBUGBAR_ENABLED=
