--- a/.env.example
+++ b/.env.example
@@ -58,12 +58,15 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ASSETS_DOMAIN=https://fastly.jsdelivr.net/gh/jundayw/ad-network-assets/
+ASSETS_DOMAIN=https://gcore.jsdelivr.net/gh/jundayw/ad-network-assets/
 STATIC_DOMAIN=http://static.test/upload/
 DOMAIN_BACKEND=ad.test
 DOMAIN_ADVERTISEMENT=advertiser.test
 DOMAIN_PUBLISHMENT=publisher.test
 DOMAIN_RENDER=render.test
 DOMAIN_ANALYSIS=analysis.test
+
+HELPS_GZIP=true
+HELPS_EXCEPTS=utils.*,publishment.adsense.code
 
 DEBUGBAR_ENABLED=
